# Mini-RAG

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
infra/: Dockerfile.frontend  Dockerfile.server  render.toml
server/: README.md  chunking.py  config.py  db.py  get_embedding_dim.py  main.py  pyproject.toml  requirements.txt  reranker.py  sample.txt
server/server/: chunking.py  embeddings.py  llm.py
supabase/: knn_function.sql  supabase_schema.sql
